--- a/index.html
+++ b/index.html
@@ -1,66 +1,85 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <title>Dashboard Phản Hồi Chấm Công</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
     body { font-family: Arial; margin: 20px; background: #fafafa; }
     h1 { margin-bottom: 5px; }
-    h2 { margin-top: 25px; }
-    .box {
-        background: white;
-        padding: 15px;
-        border-radius: 12px;
-        box-shadow: 0px 2px 8px rgba(0,0,0,0.08);
-        margin-bottom: 20px;
+    h2 { margin-top: 20px; }
+
+    .search-bar input {
+        padding: 8px;
+        width: 180px;
+        margin-right: 5px;
     }
 
-    /* Khu vực 4 charts nhỏ dưới cùng */
-    .stats-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    .search-bar button {
+        padding: 8px 12px;
+        cursor: pointer;
+    }
+
+    /* Dashboard Sections */
+    .chart-container {
+        display: flex;
+        flex-wrap: wrap;
         gap: 20px;
         margin-top: 20px;
     }
 
-    table {
+    .box {
+        background: white;
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
+    }
+
+    .chart-small {
+        width: calc(25% - 15px);
+        min-width: 260px;
+    }
+
+    table { 
+        width: 100%; 
+        border-collapse: collapse; 
+        margin-top: 20px; 
         background: white;
     }
+
     th, td {
-        padding: 8px;
+        padding: 10px;
         border-bottom: 1px solid #ddd;
         font-size: 14px;
     }
+
     th { background: #f0f0f0; }
-    input { padding: 8px; width: 240px; margin-right: 5px; }
-    .badge {
-        padding: 4px 10px;
-        border-radius: 20px;
-        font-size: 12px;
+
+    .badge { 
+        padding: 4px 12px; 
+        border-radius: 16px;
+        font-size: 12px; 
+        color: #fff;
     }
-    .confirm-none { background: #ffe3e3; color: #c00; }
-    .confirm-done { background: #d4ffe3; color: #007a2f; }
+
+    .confirm-none { background: #ff6b6b; }
+    .confirm-done { background: #2ecc71; }
+
+    /* Audio hidden */
+    audio { display: none; }
 </style>
 </head>
 
 <body>
 
-<!-- Auto play nhạc -->
-<audio autoplay loop>
-    <source src="https://raw.githubusercontent.com/hoailuan0311-code/ChamCongDashboard/main/audio/background.mp3" type="audio/mpeg">
-</audio>
-
 <h1>Dashboard Phản Hồi Chấm Công</h1>
 <p>📌 Dữ liệu được cập nhật tự động.</p>
 
-<!-- Tìm kiếm -->
-<div>
+<!-- SEARCH BAR -->
+<div class="search-bar">
     <input id="searchMSNV" placeholder="Tìm theo MSNV…">
     <input id="searchName" placeholder="Tìm theo họ tên…">
     <button onclick="applySearch()">Lọc</button>
@@ -68,89 +87,105 @@
 
 <h2>Thống kê</h2>
 
-<!-- Tổng quan -->
+<!-- MAIN SUMMARY CHART -->
 <div class="box">
     <h3>Tổng quan</h3>
     <canvas id="chartDays"></canvas>
 </div>
 
-<!-- Top phản hồi -->
-<div class="box">
-    <h3>Top phản hồi</h3>
-    <canvas id="chartTop"></canvas>
-</div>
+<h3 style="margin-top:25px;">Danh sách chi tiết</h3>
 
-<!-- KHU VỰC 4 BIỂU ĐỒ NHỎ DƯỚI CÙNG -->
-<div class="stats-grid">
+<table id="dataTable">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>MSNV</th>
+            <th>Họ tên</th>
+            <th>Ngày cần điều chỉnh</th>
+            <th>Nội dung</th>
+            <th>Confirm Admin</th>
+            <th>BU</th>
+            <th>Team</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
-    <div class="box">
-        <h3>Theo BU</h3>
+<!-- FOOTER CHARTS (4 chart nhỏ) -->
+<h2 style="margin-top:40px;">Biểu đồ phụ</h2>
+
+<div class="chart-container">
+    <div class="box chart-small">
+        <h4>Top phản hồi</h4>
+        <canvas id="chartTop"></canvas>
+    </div>
+
+    <div class="box chart-small">
+        <h4>Theo BU</h4>
         <canvas id="chartBU"></canvas>
     </div>
 
-    <div class="box">
-        <h3>Theo Team (Bar Chart)</h3>
+    <div class="box chart-small">
+        <h4>Theo Team</h4>
         <canvas id="chartTeam"></canvas>
     </div>
 
+    <div class="box chart-small">
+        <h4>Theo ngày chỉnh</h4>
+        <canvas id="chartNgayChinh"></canvas>
+    </div>
 </div>
 
-<h2>Danh sách chi tiết</h2>
-
-<table id="dataTable">
-<thead>
-<tr>
-    <th>Date</th>
-    <th>MSNV</th>
-    <th>Họ tên</th>
-    <th>Ngày cần điều chỉnh</th>
-    <th>Nội dung</th>
-    <th>Email</th>
-    <th>Confirm Admin</th>
-    <th>BU</th>
-    <th>Team</th>
-</tr>
-</thead>
-<tbody></tbody>
-</table>
+<!-- BACKGROUND MUSIC (AUTO PLAY) -->
+<audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
 
 <script>
+// ================== CONFIG ==================
 const jsonUrl = "https://hoailuan0311-code.github.io/ChamCongDashboard/data.json";
 
-function excelDateToString(v) {
+// Convert Excel serial date
+function excelDate(v) {
     if (!v) return "";
-    let d = new Date((v - 25569) * 86400 * 1000);
-    return isNaN(d) ? v : d.toLocaleDateString("en-GB", { day:"2-digit", month:"short", year:"numeric" });
+    const d = new Date((v - 25569) * 86400 * 1000);
+    if (isNaN(d)) return v;
+    return d.toLocaleDateString("en-GB", { day:"2-digit", month:"short", year:"numeric" });
 }
 
 let fullData = [];
 
+// ================== LOAD DATA ==================
 async function loadData() {
-    let res = await fetch(jsonUrl + "?t=" + Date.now());
+    let res = await fetch(jsonUrl + "?cache=" + Date.now());
     fullData = await res.json();
     renderAll(fullData);
 }
+loadData();
 
+// ================== RENDER EVERYTHING ==================
 function renderAll(data) {
     renderTable(data);
     renderSummary(data);
     renderTop(data);
     renderBU(data);
     renderTeam(data);
+    renderNgayChinh(data);
 }
 
+// ================== TABLE ==================
 function renderTable(data) {
-    let tbody = document.querySelector("#dataTable tbody");
+    const tbody = document.querySelector("#dataTable tbody");
     tbody.innerHTML = "";
+
     data.forEach(r => {
         tbody.innerHTML += `
         <tr>
-            <td>${excelDateToString(r.Date)}</td>
+            <td>${excelDate(r.Date)}</td>
             <td>${r.MSNV || ""}</td>
             <td>${r.FullName || ""}</td>
-            <td>${excelDateToString(r.NgayDieuChinh)}</td>
+            <td>${excelDate(r.NgayDieuChinh)}</td>
             <td>${r.NoiDung || ""}</td>
-            <td>${r.Email || ""}</td>
             <td><span class="badge ${r.ConfirmAdmin ? "confirm-done" : "confirm-none"}">
                 ${r.ConfirmAdmin || "Chưa phản hồi"}
             </span></td>
@@ -160,79 +195,113 @@ function renderTable(data) {
     });
 }
 
+// ================== SEARCH ==================
 function applySearch() {
-    let ms = searchMSNV.value.toLowerCase();
-    let nm = searchName.value.toLowerCase();
+    let msnv = searchMSNV.value.trim().toLowerCase();
+    let name = searchName.value.trim().toLowerCase();
 
-    let f = fullData.filter(r =>
-        (!ms || (r.MSNV || "").toLowerCase().includes(ms)) &&
-        (!nm || (r.FullName || "").toLowerCase().includes(nm))
+    let filtered = fullData.filter(r =>
+        (!msnv || (r.MSNV || "").toLowerCase().includes(msnv)) &&
+        (!name || (r.FullName || "").toLowerCase().includes(name))
     );
 
-    renderAll(f);
+    renderAll(filtered);
 }
 
-/* Tổng quan ngày */
+// ================== SUMMARY ==================
 function renderSummary(data) {
-    let counts = {};
-    data.forEach(r => counts[r.Date] = (counts[r.Date] || 0) + 1);
+    const counts = {};
+    data.forEach(r => {
+        let d = excelDate(r.Date);
+        counts[d] = (counts[d] || 0) + 1;
+    });
+
     new Chart(chartDays, {
         type: "bar",
         data: {
-            labels: Object.keys(counts).map(excelDateToString),
-            datasets: [{ label:"Số phản hồi", data:Object.values(counts), backgroundColor:"#4C8BF5" }]
+            labels: Object.keys(counts),
+            datasets:[{
+                label:"Số phản hồi",
+                data:Object.values(counts),
+                backgroundColor:"#4C8BF5"
+            }]
         }
     });
 }
 
-/* Top phản hồi */
+// ================== TOP ==================
 function renderTop(data) {
-    let c = {};
-    data.forEach(r => c[r.FullName] = (c[r.FullName] || 0) + 1);
-    let top = Object.entries(c).sort((a,b)=>b[1]-a[1]).slice(0,10);
+    const counts = {};
+    data.forEach(r => counts[r.FullName] = (counts[r.FullName] || 0) + 1);
+    let sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
+
     new Chart(chartTop, {
         type: "bar",
-        data: {
-            labels: top.map(x=>x[0]),
-            datasets: [{ label:"Số phản hồi", data:top.map(x=>x[1]), backgroundColor:"#00AEEF" }]
+        data:{
+            labels: sorted.map(x=>x[0]),
+            datasets:[{ data: sorted.map(x=>x[1]), backgroundColor:"#00AEEF"}]
         }
     });
 }
 
-/* Theo BU */
+// ================== BU ==================
 function renderBU(data) {
-    let c = {};
-    data.forEach(r => c[r.BU] = (c[r.BU] || 0) + 1);
+    const counts = {};
+    data.forEach(r => counts[r.BU] = (counts[r.BU] || 0) + 1);
+
     new Chart(chartBU, {
         type:"pie",
         data:{
-            labels:Object.keys(c),
-            datasets:[{ data:Object.values(c), backgroundColor:["#FF6384","#36A2EB","#FFCE56","#4CAF50","#BA68C8"] }]
+            labels: Object.keys(counts),
+            datasets:[{ data:Object.values(counts),
+                backgroundColor:["#ff6384","#36a2eb","#ffce56","#66bb6a","#ba68c8"]
+            }]
         }
     });
 }
 
-/* Theo Team → BAR CHART */
+// ================== TEAM ==================
 function renderTeam(data) {
-    let c = {};
-    data.forEach(r => c[r.Team] = (c[r.Team] || 0) + 1);
+    const counts = {};
+    data.forEach(r => counts[r.Team] = (counts[r.Team] || 0) + 1);
+
     new Chart(chartTeam, {
         type:"bar",
         data:{
-            labels:Object.keys(c),
+            labels:Object.keys(counts),
             datasets:[{
-                label:"Số phản hồi",
-                data:Object.values(c),
-                backgroundColor:"#FF8A65"
+                data:Object.values(counts),
+                backgroundColor:"#ff7043"
             }]
-        },
-        options:{
-            indexAxis: "y"
         }
     });
 }
 
-loadData();
+// ================== NGÀY CẦN ĐIỀU CHỈNH ==================
+function renderNgayChinh(data) {
+    const counts = {};
+    data.forEach(r => {
+        let d = excelDate(r.NgayDieuChinh);
+        counts[d] = (counts[d] || 0) + 1;
+    });
+
+    new Chart(chartNgayChinh, {
+        type:"bar",
+        data:{
+            labels:Object.keys(counts),
+            datasets:[{ data:Object.values(counts), backgroundColor:"#9b59b6" }]
+        }
+    });
+}
+
+// ================== AUTO MUSIC ==================
+const music = document.getElementById("bgMusic");
+
+// iPhone: yêu cầu user tương tác trước khi play
+document.addEventListener("touchstart", () => music.play(), { once:true });
+document.addEventListener("click", () => music.play(), { once:true });
+
+music.play().catch(()=>{});  // PC autoplay OK
 </script>
 
 </body>
