--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <!-- BACKGROUND MUSIC (AUTO PLAY) -->
 <audio id="bgMusic" loop>
-    <source src="music.mp3" type="audio/mpeg">
+    <source src="videoplayback.m4a" type="audio/mpeg">
 </audio>
 
 <script>
