--- a/index.html
+++ b/index.html
@@ -4,71 +4,75 @@
 <meta charset="UTF-8">
 <title>Dashboard Phản Hồi Chấm Công</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- ChartJS + Datalabels -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
 <style>
-    body { font-family: Arial; margin: 20px; background: #fafafa; }
-    h1 { margin-bottom: 5px; }
-    h2 { margin-top: 20px; }
+    body { 
+        font-family: Arial; 
+        margin: 20px; 
+        background: #fafafa; 
+    }
 
+    h1 { margin-bottom: 5px; }
+    h2 { margin-top: 25px; }
+
+    /* Search bar */
     .search-bar input {
         padding: 8px;
         width: 180px;
         margin-right: 5px;
     }
-
     .search-bar button {
         padding: 8px 12px;
         cursor: pointer;
     }
 
-    /* Dashboard Sections */
-    .chart-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin-top: 20px;
-    }
-
-    .box {
-        background: white;
-        padding: 15px;
-        border-radius: 12px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-        width: 100%;
-    }
-
-    .chart-small {
-        width: calc(25% - 15px);
-        min-width: 260px;
-    }
-
+    /* TABLE */
     table { 
         width: 100%; 
         border-collapse: collapse; 
-        margin-top: 20px; 
-        background: white;
+        background: white; 
+        margin-top: 20px;
     }
-
     th, td {
         padding: 10px;
         border-bottom: 1px solid #ddd;
         font-size: 14px;
     }
-
     th { background: #f0f0f0; }
 
     .badge { 
-        padding: 4px 12px; 
-        border-radius: 16px;
-        font-size: 12px; 
-        color: #fff;
+        padding: 4px 10px; 
+        border-radius: 12px; 
+        font-size: 12px;
+        color: white;
+    }
+    .confirm-done { background: #2ecc71; }
+    .confirm-none { background: #ff6b6b; }
+
+    /* FOOTER CHART GRID */
+    .chart-row {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+        flex-wrap: wrap;
     }
 
-    .confirm-none { background: #ff6b6b; }
-    .confirm-done { background: #2ecc71; }
+    .chart-bu { width: 32%; min-width: 260px; }
+    .chart-team { width: 66%; min-width: 260px; }
+    .chart-full { width: 100%; margin-top: 20px; }
 
-    /* Audio hidden */
+    .box {
+        background: white;
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+
+    /* Hidden audio */
     audio { display: none; }
 </style>
 </head>
@@ -76,7 +80,7 @@
 <body>
 
 <h1>Dashboard Phản Hồi Chấm Công</h1>
-<p>📌 Dữ liệu được cập nhật tự động.</p>
+<p>📌 Dữ liệu được cập nhật tự động từ PHẢN HỒI CHẤM CÔNG.</p>
 
 <!-- SEARCH BAR -->
 <div class="search-bar">
@@ -85,8 +89,8 @@
     <button onclick="applySearch()">Lọc</button>
 </div>
 
-<h3 style="margin-top:25px;">Danh sách chi tiết</h3>
-
+<!-- TABLE -->
+<h3>Danh sách chi tiết</h3>
 <table id="dataTable">
     <thead>
         <tr>
@@ -102,41 +106,44 @@
     <tbody></tbody>
 </table>
 
-<!-- FOOTER CHARTS (4 chart nhỏ) -->
-<h2 style="margin-top:40px;">Biểu đồ phụ</h2>
+<!-- FOOTER CHARTS -->
+<h2>Biểu đồ phụ</h2>
 
-<div class="chart-container">
-    <div class="box chart-small">
-        <h4>Top phản hồi</h4>
-        <canvas id="chartTop"></canvas>
-    </div>
-
-    <div class="box chart-small">
+<!-- ROW 1 -->
+<div class="chart-row">
+    <div class="box chart-bu">
         <h4>Theo BU</h4>
         <canvas id="chartBU"></canvas>
     </div>
 
-    <div class="box chart-small">
+    <div class="box chart-team">
         <h4>Theo Team</h4>
         <canvas id="chartTeam"></canvas>
     </div>
-
-    <div class="box chart-small">
-        <h4>Theo ngày chỉnh</h4>
-        <canvas id="chartNgayChinh"></canvas>
-    </div>
 </div>
 
-<!-- BACKGROUND MUSIC (AUTO PLAY) -->
+<!-- ROW 2 -->
+<div class="box chart-full">
+    <h4>Top phản hồi</h4>
+    <canvas id="chartTop"></canvas>
+</div>
+
+<!-- ROW 3 -->
+<div class="box chart-full">
+    <h4>Theo ngày chỉnh</h4>
+    <canvas id="chartNgayChinh"></canvas>
+</div>
+
+<!-- BACKGROUND MUSIC -->
 <audio id="bgMusic" loop>
     <source src="videoplayback.m4a" type="audio/mpeg">
 </audio>
 
 <script>
-// ================== CONFIG ==================
+// =========================== DATA SOURCE ===========================
 const jsonUrl = "https://hoailuan0311-code.github.io/ChamCongDashboard/data.json";
 
-// Convert Excel serial date
+// Convert Excel date → dd-MMM-yyyy
 function excelDate(v) {
     if (!v) return "";
     const d = new Date((v - 25569) * 86400 * 1000);
@@ -146,24 +153,24 @@ function excelDate(v) {
 
 let fullData = [];
 
-// ================== LOAD DATA ==================
+// =========================== LOAD DATA ===========================
 async function loadData() {
-    let res = await fetch(jsonUrl + "?cache=" + Date.now());
+    const res = await fetch(jsonUrl + "?cache=" + Date.now());
     fullData = await res.json();
     renderAll(fullData);
 }
 loadData();
 
-// ================== RENDER EVERYTHING ==================
+// =========================== RENDER ALL ===========================
 function renderAll(data) {
     renderTable(data);
-    renderTop(data);
     renderBU(data);
     renderTeam(data);
+    renderTop(data);
     renderNgayChinh(data);
 }
 
-// ================== TABLE ==================
+// =========================== TABLE ===========================
 function renderTable(data) {
     const tbody = document.querySelector("#dataTable tbody");
     tbody.innerHTML = "";
@@ -184,7 +191,7 @@ function renderTable(data) {
     });
 }
 
-// ================== SEARCH ==================
+// =========================== SEARCH ===========================
 function applySearch() {
     let msnv = searchMSNV.value.trim().toLowerCase();
     let name = searchName.value.trim().toLowerCase();
@@ -197,55 +204,74 @@ function applySearch() {
     renderAll(filtered);
 }
 
-// ================== TOP ==================
+// =========================== TOP FEEDBACK ===========================
 function renderTop(data) {
     const counts = {};
     data.forEach(r => counts[r.FullName] = (counts[r.FullName] || 0) + 1);
-    let sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
+
+    const sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
 
     new Chart(chartTop, {
         type: "bar",
-        data:{
+        data: {
             labels: sorted.map(x=>x[0]),
-            datasets:[{ data: sorted.map(x=>x[1]), backgroundColor:"#00AEEF"}]
+            datasets: [{
+                label: "Số phản hồi",
+                data: sorted.map(x=>x[1]),
+                backgroundColor: "#00AEEF"
+            }]
+        },
+        plugins: [ChartDataLabels],
+        options: {
+            plugins: {
+                datalabels: { anchor:"end", align:"top", color:"#000", font:{weight:"bold"} }
+            }
         }
     });
 }
 
-// ================== BU ==================
+// =========================== BU ===========================
 function renderBU(data) {
     const counts = {};
     data.forEach(r => counts[r.BU] = (counts[r.BU] || 0) + 1);
 
     new Chart(chartBU, {
-        type:"pie",
-        data:{
+        type: "pie",
+        data: {
             labels: Object.keys(counts),
-            datasets:[{ data:Object.values(counts),
+            datasets: [{
+                data: Object.values(counts),
                 backgroundColor:["#ff6384","#36a2eb","#ffce56","#66bb6a","#ba68c8"]
             }]
         }
     });
 }
 
-// ================== TEAM ==================
+// =========================== TEAM (BAR) ===========================
 function renderTeam(data) {
     const counts = {};
     data.forEach(r => counts[r.Team] = (counts[r.Team] || 0) + 1);
 
     new Chart(chartTeam, {
-        type:"bar",
-        data:{
-            labels:Object.keys(counts),
-            datasets:[{
-                data:Object.values(counts),
-                backgroundColor:"#ff7043"
+        type: "bar",
+        data: {
+            labels: Object.keys(counts),
+            datasets: [{
+                label: "Số phản hồi",
+                data: Object.values(counts),
+                backgroundColor: "#ff7043"
             }]
+        },
+        plugins: [ChartDataLabels],
+        options: {
+            plugins: {
+                datalabels: { anchor:"end", align:"top", color:"#000", font:{weight:"bold"} }
+            }
         }
     });
 }
 
-// ================== NGÀY CẦN ĐIỀU CHỈNH ==================
+// =========================== NGÀY CHỈNH ===========================
 function renderNgayChinh(data) {
     const counts = {};
     data.forEach(r => {
@@ -254,22 +280,31 @@ function renderNgayChinh(data) {
     });
 
     new Chart(chartNgayChinh, {
-        type:"bar",
-        data:{
-            labels:Object.keys(counts),
-            datasets:[{ data:Object.values(counts), backgroundColor:"#9b59b6" }]
+        type: "bar",
+        data: {
+            labels: Object.keys(counts),
+            datasets: [{
+                label: "Số phản hồi",
+                data: Object.values(counts),
+                backgroundColor: "#9b59b6"
+            }]
+        },
+        plugins: [ChartDataLabels],
+        options: {
+            plugins: {
+                datalabels: { anchor:"end", align:"top", color:"#000", font:{weight:"bold"} }
+            }
         }
     });
 }
 
-// ================== AUTO MUSIC ==================
+// =========================== AUTO MUSIC ===========================
 const music = document.getElementById("bgMusic");
 
-// iPhone: yêu cầu user tương tác trước khi play
-document.addEventListener("touchstart", () => music.play(), { once:true });
-document.addEventListener("click", () => music.play(), { once:true });
+document.addEventListener("click", ()=> music.play(), {once:true});
+document.addEventListener("touchstart", ()=> music.play(), {once:true});
 
-music.play().catch(()=>{});  // PC autoplay OK
+music.play().catch(()=>{});
 </script>
 
 </body>
