--- a/index.html
+++ b/index.html
@@ -5,21 +5,14 @@
 <title>Dashboard Phản Hồi Chấm Công</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- ChartJS + Datalabels -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
 <style>
-    body { 
-        font-family: Arial; 
-        margin: 20px; 
-        background: #fafafa; 
-    }
-
+    body { font-family: Arial; margin: 20px; background: #fafafa; }
     h1 { margin-bottom: 5px; }
-    h2 { margin-top: 25px; }
+    h2 { margin-top: 20px; }
 
-    /* Search bar */
     .search-bar input {
         padding: 8px;
         width: 180px;
@@ -30,12 +23,11 @@
         cursor: pointer;
     }
 
-    /* TABLE */
     table { 
         width: 100%; 
         border-collapse: collapse; 
-        background: white; 
-        margin-top: 20px;
+        margin-top: 20px; 
+        background: white;
     }
     th, td {
         padding: 10px;
@@ -45,34 +37,53 @@
     th { background: #f0f0f0; }
 
     .badge { 
-        padding: 4px 10px; 
-        border-radius: 12px; 
-        font-size: 12px;
-        color: white;
+        padding: 4px 12px; 
+        border-radius: 16px;
+        font-size: 12px; 
+        color: #fff;
     }
-    .confirm-done { background: #2ecc71; }
     .confirm-none { background: #ff6b6b; }
+    .confirm-done { background: #2ecc71; }
 
-    /* FOOTER CHART GRID */
+    /* Footer chart layout */
     .chart-row {
         display: flex;
+        flex-wrap: nowrap;
         gap: 20px;
         margin-top: 20px;
-        flex-wrap: wrap;
     }
-
-    .chart-bu { width: 32%; min-width: 260px; }
-    .chart-team { width: 66%; min-width: 260px; }
-    .chart-full { width: 100%; margin-top: 20px; }
-
-    .box {
+    .chart-bu {
+        width: 33%;
+        min-width: 250px;
         background: white;
         padding: 15px;
         border-radius: 12px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .chart-team {
+        width: 67%;
+        min-width: 250px;
+        background: white;
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    /* Hidden audio */
+    .chart-full {
+        width: 100%;
+        background: white;
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        margin-top: 20px;
+    }
+
+    .chart-bu canvas,
+    .chart-team canvas {
+        height: 300px !important;
+        max-height: 300px !important;
+    }
+
     audio { display: none; }
 </style>
 </head>
@@ -80,17 +91,18 @@
 <body>
 
 <h1>Dashboard Phản Hồi Chấm Công</h1>
-<p>📌 Dữ liệu được cập nhật tự động từ PHẢN HỒI CHẤM CÔNG.</p>
+<p>📌 Dữ liệu được cập nhật tự động.</p>
 
 <!-- SEARCH BAR -->
 <div class="search-bar">
     <input id="searchMSNV" placeholder="Tìm theo MSNV…">
     <input id="searchName" placeholder="Tìm theo họ tên…">
     <button onclick="applySearch()">Lọc</button>
+    <button onclick="clearSearch()">Xóa</button>
 </div>
 
-<!-- TABLE -->
-<h3>Danh sách chi tiết</h3>
+<h3 style="margin-top:25px;">Danh sách chi tiết</h3>
+
 <table id="dataTable">
     <thead>
         <tr>
@@ -106,44 +118,44 @@
     <tbody></tbody>
 </table>
 
-<!-- FOOTER CHARTS -->
 <h2>Biểu đồ phụ</h2>
 
-<!-- ROW 1 -->
+<!-- BU + TEAM -->
 <div class="chart-row">
-    <div class="box chart-bu">
+    <div class="chart-bu">
         <h4>Theo BU</h4>
         <canvas id="chartBU"></canvas>
     </div>
 
-    <div class="box chart-team">
+    <div class="chart-team">
         <h4>Theo Team</h4>
         <canvas id="chartTeam"></canvas>
     </div>
 </div>
 
-<!-- ROW 2 -->
-<div class="box chart-full">
+<!-- TOP -->
+<div class="chart-full">
     <h4>Top phản hồi</h4>
     <canvas id="chartTop"></canvas>
 </div>
 
-<!-- ROW 3 -->
-<div class="box chart-full">
+<!-- NGÀY CHỈNH -->
+<div class="chart-full">
     <h4>Theo ngày chỉnh</h4>
     <canvas id="chartNgayChinh"></canvas>
 </div>
+
 
 <!-- BACKGROUND MUSIC -->
 <audio id="bgMusic" loop>
     <source src="videoplayback.m4a" type="audio/mpeg">
 </audio>
 
+
 <script>
-// =========================== DATA SOURCE ===========================
+// ================== CONFIG ==================
 const jsonUrl = "https://hoailuan0311-code.github.io/ChamCongDashboard/data.json";
 
-// Convert Excel date → dd-MMM-yyyy
 function excelDate(v) {
     if (!v) return "";
     const d = new Date((v - 25569) * 86400 * 1000);
@@ -153,24 +165,24 @@ function excelDate(v) {
 
 let fullData = [];
 
-// =========================== LOAD DATA ===========================
+// ================== LOAD ==================
 async function loadData() {
-    const res = await fetch(jsonUrl + "?cache=" + Date.now());
+    let res = await fetch(jsonUrl + "?cache=" + Date.now());
     fullData = await res.json();
     renderAll(fullData);
 }
 loadData();
 
-// =========================== RENDER ALL ===========================
+// ================== RENDER ==================
 function renderAll(data) {
     renderTable(data);
+    renderTop(data);
     renderBU(data);
     renderTeam(data);
-    renderTop(data);
     renderNgayChinh(data);
 }
 
-// =========================== TABLE ===========================
+// ================== TABLE ==================
 function renderTable(data) {
     const tbody = document.querySelector("#dataTable tbody");
     tbody.innerHTML = "";
@@ -191,7 +203,7 @@ function renderTable(data) {
     });
 }
 
-// =========================== SEARCH ===========================
+// ================== SEARCH ==================
 function applySearch() {
     let msnv = searchMSNV.value.trim().toLowerCase();
     let name = searchName.value.trim().toLowerCase();
@@ -204,74 +216,77 @@ function applySearch() {
     renderAll(filtered);
 }
 
-// =========================== TOP FEEDBACK ===========================
+function clearSearch() {
+    searchMSNV.value = "";
+    searchName.value = "";
+    renderAll(fullData);
+}
+
+// ================== TOP ==================
 function renderTop(data) {
     const counts = {};
     data.forEach(r => counts[r.FullName] = (counts[r.FullName] || 0) + 1);
 
-    const sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
+    let sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
 
     new Chart(chartTop, {
         type: "bar",
-        data: {
+        plugins: [ChartDataLabels],
+        data:{
             labels: sorted.map(x=>x[0]),
-            datasets: [{
-                label: "Số phản hồi",
+            datasets:[{
                 data: sorted.map(x=>x[1]),
-                backgroundColor: "#00AEEF"
+                backgroundColor:"#00AEEF"
             }]
         },
-        plugins: [ChartDataLabels],
-        options: {
-            plugins: {
-                datalabels: { anchor:"end", align:"top", color:"#000", font:{weight:"bold"} }
-            }
+        options:{
+            plugins:{ datalabels:{ anchor:"end", align:"top" } }
         }
     });
 }
 
-// =========================== BU ===========================
+// ================== BU ==================
 function renderBU(data) {
     const counts = {};
     data.forEach(r => counts[r.BU] = (counts[r.BU] || 0) + 1);
 
     new Chart(chartBU, {
-        type: "pie",
-        data: {
-            labels: Object.keys(counts),
-            datasets: [{
-                data: Object.values(counts),
+        type:"pie",
+        plugins:[ChartDataLabels],
+        data:{
+            labels:Object.keys(counts),
+            datasets:[{ data:Object.values(counts),
                 backgroundColor:["#ff6384","#36a2eb","#ffce56","#66bb6a","#ba68c8"]
             }]
+        },
+        options:{
+            plugins:{ datalabels:{ color:"#fff", formatter:v=>v } }
         }
     });
 }
 
-// =========================== TEAM (BAR) ===========================
+// ================== TEAM ==================
 function renderTeam(data) {
     const counts = {};
     data.forEach(r => counts[r.Team] = (counts[r.Team] || 0) + 1);
 
     new Chart(chartTeam, {
-        type: "bar",
-        data: {
-            labels: Object.keys(counts),
-            datasets: [{
-                label: "Số phản hồi",
-                data: Object.values(counts),
-                backgroundColor: "#ff7043"
+        type:"bar",
+        plugins:[ChartDataLabels],
+        data:{
+            labels:Object.keys(counts),
+            datasets:[{
+                data:Object.values(counts),
+                backgroundColor:"#ff7043"
             }]
         },
-        plugins: [ChartDataLabels],
-        options: {
-            plugins: {
-                datalabels: { anchor:"end", align:"top", color:"#000", font:{weight:"bold"} }
-            }
+        options:{
+            plugins:{ datalabels:{ anchor:"end", align:"top" } }
         }
     });
 }
 
-// =========================== NGÀY CHỈNH ===========================
+// ================== NGÀY CHỈNH ==================
 function renderNgayChinh(data) {
     const counts = {};
     data.forEach(r => {
@@ -280,31 +295,28 @@ function renderNgayChinh(data) {
     });
 
     new Chart(chartNgayChinh, {
-        type: "bar",
-        data: {
-            labels: Object.keys(counts),
-            datasets: [{
-                label: "Số phản hồi",
-                data: Object.values(counts),
-                backgroundColor: "#9b59b6"
+        type:"bar",
+        plugins:[ChartDataLabels],
+        data:{
+            labels:Object.keys(counts),
+            datasets:[{
+                data:Object.values(counts),
+                backgroundColor:"#9b59b6"
             }]
         },
-        plugins: [ChartDataLabels],
-        options: {
-            plugins: {
-                datalabels: { anchor:"end", align:"top", color:"#000", font:{weight:"bold"} }
-            }
+        options:{
+            plugins:{ datalabels:{ anchor:"end", align:"top" } }
         }
     });
 }
 
-// =========================== AUTO MUSIC ===========================
+
+// ================== AUTO MUSIC ==================
 const music = document.getElementById("bgMusic");
-
-document.addEventListener("click", ()=> music.play(), {once:true});
-document.addEventListener("touchstart", ()=> music.play(), {once:true});
-
+document.addEventListener("touchstart", () => music.play(), { once:true });
+document.addEventListener("click", () => music.play(), { once:true });
 music.play().catch(()=>{});
+
 </script>
 
 </body>
