Refactor index.html for styling and functionality
Updated styles for improved aesthetics and added dark mode support. Enhanced search functionality and pagination controls.

--- a/index.html
+++ b/index.html
@@ -4,50 +4,135 @@
 <meta charset="UTF-8">
 <title>Dashboard Phản Hồi Chấm Công</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Chart.js + DataLabels -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
 <style>
     body {
-        font-family: Arial;
+        font-family: Arial, sans-serif;
         margin: 20px;
         background: #fafafa;
+        color: #111827;
         transition: background 0.3s, color 0.3s;
     }
 
-    /* Auto Dark Mode */
-    @media (prefers-color-scheme: dark) {
-        body { background: #1e1e1e; color: white; }
-        table { background: #2a2a2a; color: white; }
-        th { background: #333 !important; }
-        .box { background: #2d2d2d; box-shadow: none; }
-        input { background: #333; color: white; border: 1px solid #555; }
+    /* Header gradient */
+    h1 {
+        margin-bottom: 5px;
+        font-weight: 900;
+        font-size: 26px;
+        background: linear-gradient(90deg, #4facfe 0%, #00f2fe 100%);
+        -webkit-background-clip: text;
+        color: transparent;
     }
 
-    h1 { margin-bottom: 5px; }
-    h2 { margin-top: 20px; }
+    h2 {
+        margin-top: 24px;
+        font-size: 18px;
+    }
+
+    h3 {
+        margin-top: 24px;
+        font-size: 16px;
+    }
+
+    h4 {
+        margin: 0 0 8px 0;
+        font-size: 14px;
+    }
+
+    /* Search bar */
+    .search-bar {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
 
     .search-bar input {
         padding: 8px;
         width: 170px;
         margin-right: 5px;
+        border-radius: 6px;
+        border: 1px solid #d1d5db;
+        font-size: 13px;
     }
 
     .search-bar button {
         padding: 8px 12px;
         cursor: pointer;
+        border-radius: 6px;
+        border: none;
+        font-size: 13px;
+        color: #fff;
+        background: linear-gradient(90deg, #00c6ff, #0072ff);
+        transition: 0.2s;
     }
 
+    .search-bar button:hover {
+        opacity: 0.85;
+        transform: translateY(-1px);
+    }
+
+    /* Table */
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 16px;
+        background: #ffffff;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+
+    th, td {
+        padding: 10px;
+        border-bottom: 1px solid #e5e7eb;
+        font-size: 13px;
+        text-align: left;
+    }
+
+    th {
+        background: #f3f4f6;
+        cursor: pointer;
+        user-select: none;
+        font-weight: 600;
+    }
+
+    th.sortable::after {
+        content: " ⬍";
+        font-size: 11px;
+        color: #9ca3af;
+    }
+
+    tr:nth-child(even) td {
+        background: #fbfbfb;
+    }
+
+    .badge {
+        padding: 4px 10px;
+        border-radius: 999px;
+        font-size: 11px;
+        color: #fff;
+        white-space: nowrap;
+    }
+
+    .confirm-none { background: #ef4444; }
+    .confirm-done { background: #22c55e; }
+
+    /* Footer charts layout */
     .chart-row {
         display: flex;
         gap: 20px;
         width: 100%;
+        flex-wrap: wrap;
+        margin-top: 16px;
     }
 
     .box {
-        background: white;
-        padding: 15px;
-        border-radius: 12px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        background: #ffffff;
+        padding: 14px;
+        border-radius: 14px;
+        box-shadow: 0 4px 10px rgba(15, 23, 42, 0.08);
         flex: 1;
         min-width: 260px;
     }
@@ -56,39 +141,109 @@
     .box-two-third { flex: 0.67; }
     .box-full { flex: 1; }
 
-    table { 
-        width: 100%; 
-        border-collapse: collapse; 
-        margin-top: 20px; 
-        background: white;
+    canvas {
+        width: 100% !important;
+        height: 260px !important;
     }
 
-    th, td {
-        padding: 10px;
-        border-bottom: 1px solid #ddd;
-        font-size: 14px;
+    /* Pagination */
+    .pagination {
+        margin-top: 10px;
     }
 
-    th { background: #f0f0f0; cursor: pointer; user-select: none; }
-
-    .badge { 
-        padding: 4px 12px; 
-        border-radius: 16px;
-        font-size: 12px; 
-        color: #fff;
+    .pagination button {
+        margin: 0 2px;
+        padding: 4px 8px;
+        font-size: 12px;
+        border-radius: 4px;
+        border: 1px solid #d1d5db;
+        background: #ffffff;
+        cursor: pointer;
     }
 
-    .confirm-none { background: #ff6b6b; }
-    .confirm-done { background: #2ecc71; }
+    .pagination button.active {
+        background: #2563eb;
+        color: #ffffff;
+        border-color: #2563eb;
+    }
 
+    .pagination button:disabled {
+        opacity: 0.4;
+        cursor: default;
+    }
+
+    /* Hidden audio */
     audio { display: none; }
+
+    /* ====== DARK MODE ====== */
+    @media (prefers-color-scheme: dark) {
+        body {
+            background: #111827;
+            color: #e5e7eb;
+        }
+
+        h1 {
+            background: linear-gradient(90deg, #8e9eab 0%, #eef2f3 100%);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+
+        table {
+            background: #1f2933;
+        }
+
+        th {
+            background: #374151 !important;
+            color: #e5e7eb;
+        }
+
+        td {
+            background: #111827;
+            border-bottom: 1px solid #374151;
+            color: #f9fafb !important;
+        }
+
+        tr:nth-child(even) td {
+            background: #1f2933;
+        }
+
+        .box {
+            background: #1f2933;
+            box-shadow: 0 0 12px rgba(0,0,0,0.5);
+        }
+
+        .search-bar input {
+            background: #111827;
+            color: #e5e7eb;
+            border-color: #374151;
+        }
+
+        .search-bar button {
+            background: linear-gradient(90deg, #434343, #000000);
+        }
+
+        .pagination button {
+            background: #111827;
+            border-color: #4b5563;
+            color: #e5e7eb;
+        }
+
+        .pagination button.active {
+            background: #4f46e5;
+            border-color: #4f46e5;
+            color: #e5e7eb;
+        }
+
+        .confirm-none { background: #dc2626; }
+        .confirm-done { background: #16a34a; }
+    }
 </style>
 </head>
 
 <body>
 
-<h1>Dashboard Phản Hồi Chấm Công</h1>
-<p>📌 Dữ liệu được cập nhật tự động ❤️🫶❤️.</p>
+<h1>Dashboard Phản Hồi Chấm Công - WAREHOUSE RYOBI</h1>
+<p>📌 Dữ liệu được cập nhật tự động ❤️🫶❤️</p>
 
 <!-- SEARCH BAR -->
 <div class="search-bar">
@@ -97,14 +252,14 @@
     <button onclick="resetFilter()">Xóa lọc</button>
 </div>
 
-<h3 style="margin-top:25px;">Danh sách chi tiết</h3>
+<h3>Danh sách chi tiết</h3>
 
 <table id="dataTable">
     <thead>
         <tr>
-            <th onclick="sortTable('MSNV')">MSNV ⬍</th>
+            <th class="sortable" onclick="sortTable('MSNV')">MSNV</th>
             <th>Họ tên</th>
-            <th onclick="sortTable('NgayDieuChinh')">Ngày cần điều chỉnh ⬍</th>
+            <th class="sortable" onclick="sortTable('NgayDieuChinh')">Ngày cần điều chỉnh</th>
             <th>Nội dung</th>
             <th>Confirm Admin</th>
             <th>BU</th>
@@ -114,8 +269,9 @@
     <tbody></tbody>
 </table>
 
-<!-- FOOTER CHARTS -->
-<h2 style="margin-top:40px;">Biểu đồ phụ</h2>
+<div id="pagination" class="pagination"></div>
+
+<h2>Biểu đồ phụ</h2>
 
 <!-- BU + Team -->
 <div class="chart-row">
@@ -148,6 +304,7 @@
 
 <!-- BACKGROUND MUSIC -->
 <audio id="bgMusic" loop>
+    <!-- Đổi sang link file của bạn nếu cần -->
     <source src="videoplayback.m4a" type="audio/mp4">
 </audio>
 
@@ -155,38 +312,83 @@
 // ================== CONFIG ==================
 const jsonUrl = "https://hoailuan0311-code.github.io/ChamCongDashboard/data.json";
 
-// Convert Excel serial date
 function excelSerialToDate(v) {
-    if (!v) return "";
+    if (!v) return null;
     const d = new Date((v - 25569) * 86400 * 1000);
-    if (isNaN(d)) return "";
-    return d;
+    return isNaN(d) ? null : d;
 }
 
-// Format dd-MMM-yyyy
 function excelDate(v) {
-    let d = excelSerialToDate(v);
+    const d = excelSerialToDate(v);
     if (!d) return "";
     return d.toLocaleDateString("en-GB", { day:"2-digit", month:"short", year:"numeric" });
 }
 
 let fullData = [];
+let viewData = [];
 let sortState = {};
+let currentPage = 1;
+const rowsPerPage = 50;
+
+// chart instances
+let chartBUInstance, chartTeamInstance, chartTopInstance, chartNgayInstance;
 
 // ================== LOAD DATA ==================
 async function loadData() {
-    let res = await fetch(jsonUrl + "?cache=" + Date.now());
+    const res = await fetch(jsonUrl + "?cache=" + Date.now());
     fullData = await res.json();
-    renderAll(fullData);
+    viewData = [...fullData];
+    currentPage = 1;
+    renderAll(viewData);
 }
 loadData();
 
+// ================== PAGINATION ==================
+function paginate(data) {
+    const start = (currentPage - 1) * rowsPerPage;
+    return data.slice(start, start + rowsPerPage);
+}
+
+function renderPagination(totalRows) {
+    const container = document.getElementById("pagination");
+    container.innerHTML = "";
+    const totalPages = Math.ceil(totalRows / rowsPerPage);
+    if (totalPages <= 1) return;
+
+    const makeBtn = (text, page, disabled = false, active = false) => {
+        const btn = document.createElement("button");
+        btn.textContent = text;
+        if (disabled) btn.disabled = true;
+        if (active) btn.classList.add("active");
+        btn.onclick = () => {
+            if (!disabled) {
+                currentPage = page;
+                renderAll(viewData);
+            }
+        };
+        container.appendChild(btn);
+    };
+
+    makeBtn("«", 1, currentPage === 1);
+    makeBtn("<", Math.max(1, currentPage - 1), currentPage === 1);
+
+    for (let p = 1; p <= totalPages; p++) {
+        makeBtn(p, p, false, p === currentPage);
+    }
+
+    makeBtn(">", Math.min(totalPages, currentPage + 1), currentPage === totalPages);
+    makeBtn("»", totalPages, currentPage === totalPages);
+}
+
 // ================== RENDER EVERYTHING ==================
 function renderAll(data) {
-    renderTable(data);
-    renderTop(data);
+    const pageData = paginate(data);
+    renderTable(pageData);
+    renderPagination(data.length);
+    destroyCharts();
     renderBU(data);
     renderTeam(data);
+    renderTop(data);
     renderNgayChinh(data);
 }
 
@@ -215,10 +417,9 @@ function renderTable(data) {
 function sortTable(column) {
     sortState[column] = !sortState[column];
 
-    let sorted = [...fullData];
-
-    sorted.sort((a, b) => {
-        let valA = a[column], valB = b[column];
+    viewData.sort((a, b) => {
+        let valA = a[column];
+        let valB = b[column];
 
         if (column === "MSNV") {
             valA = Number(valA) || 0;
@@ -235,119 +436,191 @@ function sortTable(column) {
         return 0;
     });
 
-    renderAll(sorted);
+    currentPage = 1;
+    renderAll(viewData);
 }
 
 // ================== SEARCH ==================
 function applySearch() {
-    let msnv = searchMSNV.value.trim().toLowerCase();
-    let name = searchName.value.trim().toLowerCase();
+    const msnv = document.getElementById("searchMSNV").value.trim().toLowerCase();
+    const name = document.getElementById("searchName").value.trim().toLowerCase();
 
-    let filtered = fullData.filter(r =>
-        (!msnv || (r.MSNV || "").toLowerCase().includes(msnv)) &&
+    viewData = fullData.filter(r =>
+        (!msnv || (r.MSNV || "").toString().toLowerCase().includes(msnv)) &&
         (!name || (r.FullName || "").toLowerCase().includes(name))
     );
 
-    renderAll(filtered);
+    currentPage = 1;
+    renderAll(viewData);
 }
 
 function resetFilter() {
-    searchMSNV.value = "";
-    searchName.value = "";
-    renderAll(fullData);
+    document.getElementById("searchMSNV").value = "";
+    document.getElementById("searchName").value = "";
+    viewData = [...fullData];
+    currentPage = 1;
+    renderAll(viewData);
 }
 
-// ================== CHARTS ==================
-function animateCfg() {
+// ================== CHART ANIMATION CONFIG ==================
+function barAnimateCfg() {
     return {
+        responsive: true,
+        maintainAspectRatio: false,
         animation: {
             duration: 1200,
-            easing: "easeOutBounce"
+            easing: "easeOutElastic"
+        },
+        animations: {
+            y: {
+                delay: ctx => ctx.dataIndex * 70
+            }
+        },
+        plugins: {
+            legend: { display: false },
+            datalabels: {
+                anchor: "end",
+                align: "top",
+                color: "#111827",
+                font: { weight: "bold", size: 11 },
+                formatter: v => v
+            }
+        },
+        scales: {
+            x: { ticks: { autoSkip: true, maxRotation: 45, minRotation: 0 } },
+            y: { beginAtZero: true, precision: 0 }
         }
     };
 }
 
+function pieAnimateCfg() {
+    return {
+        responsive: true,
+        maintainAspectRatio: false,
+        animation: {
+            animateRotate: true,
+            animateScale: true,
+            duration: 1000
+        },
+        plugins: {
+            legend: { position: "bottom" },
+            datalabels: {
+                color: "#ffffff",
+                font: { weight: "bold", size: 11 },
+                formatter: v => v
+            }
+        }
+    };
+}
+
+// ================== DESTROY OLD CHARTS ==================
+function destroyCharts() {
+    [chartBUInstance, chartTeamInstance, chartTopInstance, chartNgayInstance].forEach(c => {
+        if (c) c.destroy();
+    });
+    chartBUInstance = chartTeamInstance = chartTopInstance = chartNgayInstance = null;
+}
+
+// ================== CHARTS ==================
 function renderTop(data) {
     const counts = {};
-    data.forEach(r => counts[r.FullName] = (counts[r.FullName] || 0) + 1);
-    let sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
+    data.forEach(r => {
+        if (!r.FullName) return;
+        counts[r.FullName] = (counts[r.FullName] || 0) + 1;
+    });
+    const sorted = Object.entries(counts).sort((a,b)=>b[1]-a[1]).slice(0,10);
 
-    new Chart(chartTop, {
+    chartTopInstance = new Chart(document.getElementById("chartTop"), {
         type: "bar",
         data:{
-            labels: sorted.map(x=>x[0]),
+            labels: sorted.map(x => x[0]),
             datasets:[{
                 label: "Số phản hồi",
-                data: sorted.map(x=>x[1]),
+                data: sorted.map(x => x[1]),
                 backgroundColor:"#4C8BF5"
             }]
         },
-        options: animateCfg()
+        plugins: [ChartDataLabels],
+        options: barAnimateCfg()
     });
 }
 
 function renderBU(data) {
     const counts = {};
-    data.forEach(r => counts[r.BU] = (counts[r.BU] || 0) + 1);
+    data.forEach(r => {
+        const key = r.BU || "Khác";
+        counts[key] = (counts[key] || 0) + 1;
+    });
 
-    new Chart(chartBU, {
+    chartBUInstance = new Chart(document.getElementById("chartBU"), {
         type:"pie",
         data:{
             labels: Object.keys(counts),
             datasets:[{
                 label: "Số phản hồi",
                 data:Object.values(counts),
-                backgroundColor:["#ff6384","#36a2eb","#ffce56","#66bb6a","#ba68c8"]
+                backgroundColor:["#f97373","#60a5fa","#facc15","#4ade80","#a855f7","#fb923c"]
             }]
         },
-        options: animateCfg()
+        plugins: [ChartDataLabels],
+        options: pieAnimateCfg()
     });
 }
 
 function renderTeam(data) {
     const counts = {};
-    data.forEach(r => counts[r.Team] = (counts[r.Team] || 0) + 1);
+    data.forEach(r => {
+        const key = r.Team || "Khác";
+        counts[key] = (counts[key] || 0) + 1;
+    });
 
-    new Chart(chartTeam, {
+    chartTeamInstance = new Chart(document.getElementById("chartTeam"), {
         type:"bar",
         data:{
             labels:Object.keys(counts),
             datasets:[{
                 label:"Số phản hồi",
                 data:Object.values(counts),
-                backgroundColor:"#ff7043"
+                backgroundColor:"#fb923c"
             }]
         },
-        options: animateCfg()
+        plugins: [ChartDataLabels],
+        options: barAnimateCfg()
     });
 }
 
 function renderNgayChinh(data) {
     const counts = {};
     data.forEach(r => {
-        let d = excelDate(r.NgayDieuChinh);
-        if(d) counts[d] = (counts[d] || 0) + 1;
+        const label = excelDate(r.NgayDieuChinh);
+        if (!label) return;
+        counts[label] = (counts[label] || 0) + 1;
     });
 
-    new Chart(chartNgayChinh, {
+    chartNgayInstance = new Chart(document.getElementById("chartNgayChinh"), {
         type:"bar",
         data:{
             labels:Object.keys(counts),
             datasets:[{
                 label:"Số phản hồi",
                 data:Object.values(counts),
-                backgroundColor:"#9b59b6"
+                backgroundColor:"#a855f7"
             }]
         },
-        options: animateCfg()
+        plugins: [ChartDataLabels],
+        options: barAnimateCfg()
     });
 }
 
 // ================== AUTO MUSIC ==================
 const music = document.getElementById("bgMusic");
-document.addEventListener("touchstart", () => music.play(), { once:true });
-document.addEventListener("click", () => music.play(), { once:true });
-music.play().catch(()=>{});
+
+// PC cố play luôn
+music.play().catch(() => {});
+
+// iOS / Mobile: cần user tương tác
+document.addEventListener("touchstart", () => music.play(), { once: true });
+document.addEventListener("click", () => music.play(), { once: true });
 </script>
 
 </body>
